    The "Pause" mapper shortcut is now moved to
    HOST[F11/F12]+Pause instead of Ctrl+Pause so that
    Ctrl+Break can work properly for users, and the
    function to send the Ctrl+Break key from the menu
    ("Send special key" under "Main") is added. Also,
    the PC-98 STOP key now functions the same as the
    Ctrl+C and Ctrl+Break keys in IBM PC mode.
  - Added two new menu items in the "Shared clipboard
    functions" menu group under "Main", including "Copy
    all text on the DOS screen" which will copy all
    screen text to the clipboard, and "Stop clipboard
    pasting" which allows user to stop pasting in the
    middle of pasting long clipboard content. (Wengier)
  - The mouse copy/paste feature is now available for
    non-Windows systems on SDL2 builds. Also, pasting
    from the clipboard with a mapped shortcut is also
    available for Linux/X11 on SDL1 builds. (Wengier)
  - Added "Use US keyboard layout" toggle menu item in
    the "PC-98" menu group under "Video" to select
    whether to force the default US keyboard layout in
    PC-98 mode, same as the "pc-98 force ibm keyboard
    layout" config option in [pc98] section. Also moved
    the "PC-98 PIT master clock" options from the "DOS"
    menu to this menu group. (Wengier)
  - Updated MPXPLAY to latest version 1.65. (Wengier)
  - Updated the Windows installer to default to the
    "typical" installation. For the full installation
    start menu items will be added for DOSBox-X builds
    copied to subdirectories. In both cases the Windows
    installer now also copy the DLL files inpout32.dll
    (32-bit) and inpoutx64.dll (64-bit) to the DOSBox-X
    install directory for use with the direct parallel
    port passthrough feature. (Wengier)
  - Improved Flatpak support for Linux. (rderooy)
  - Improved message for the -help command-line option,
    adding for example the -socket option. (Wengier)
  - Fixed command-line option -socket not working for
    the nullmodem feature. (Wengier)