@@ -590,15 +590,10 @@ const char *drive_opts[][2] = {
     { NULL, NULL }
 };
 
-bool quick_launch_menu_callback(DOSBoxMenu * const menu,DOSBoxMenu::item * const menuitem) {
-    (void)menu;//UNUSED
-    (void)menuitem;//UNUSED
-
-    if (dos_kernel_disabled) return true;
-
+void QuickLaunch(bool bPressed) {
+    if (!bPressed) return;
+    if (dos_kernel_disabled) return;
     MenuBrowseProgramFile();
-
-    return true;
 }
 
 const char *scaler_menu_opts[][2] = {
@@ -864,6 +859,7 @@ void FreeBIOSDiskList();
 void GFX_ShutDown(void);
 void MAPPER_Shutdown();
 void SHELL_Init(void);
+void CopyAllClipboard(bool bPressed);
 void PasteClipboard(bool bPressed);
 void CopyClipboard(bool all);
 
@@ -4065,6 +4061,11 @@ static void GUI_StartUp() {
     MAPPER_AddHandler(RebootGuest, MK_s, MMODHOST, "reboot", "Reboot DOS", &item); /* Reboot guest system or integrated DOS */
     item->set_text("Reboot guest system");
 
+#if !defined(HX_DOS)
+    MAPPER_AddHandler(QuickLaunch, MK_q, MMODHOST, "quickrun", "QuickRun", &item);
+    item->set_text("Quick launch program...");
+#endif
+
 #if !defined(C_EMSCRIPTEN)//FIXME: Shutdown causes problems with Emscripten
     MAPPER_AddHandler(KillSwitch,MK_f9,MMOD1,"shutdown","ShutDown", &item); /* KEEP: Most DOSBox-X users may have muscle memory for this */
     item->set_text("Quit");
@@ -4076,7 +4077,10 @@ static void GUI_StartUp() {
     MAPPER_AddHandler(SwitchFullScreen,MK_f,MMODHOST,"fullscr","Fullscreen", &item);
     item->set_text("Toggle fullscreen");
 
-    MAPPER_AddHandler(PasteClipboard, MK_nothing, 0, "paste", "Paste Clip", &item); //end emendelson; improved by Wengier
+    MAPPER_AddHandler(CopyAllClipboard,MK_a,MMODHOST,"copyall", "CopyToClip", &item);
+    item->set_text("Copy all text on the DOS screen");
+
+    MAPPER_AddHandler(PasteClipboard,MK_v,MMODHOST,"paste", "Paste Clip", &item); //end emendelson; improved by Wengier
     item->set_text("Pasting from the clipboard");
 
     MAPPER_AddHandler(&PauseDOSBox, MK_pause, MMODHOST, "pause", "Pause");
@@ -8531,6 +8535,11 @@ bool screen_to_clipboard_menu_callback(DOSBoxMenu * const menu, DOSBoxMenu::item
     CopyClipboard(true);
     return true;
 }
+
+void CopyAllClipboard(bool bPressed) {
+    if (!bPressed) return;
+    CopyClipboard(true);
+}
 #endif
 
 #if defined (WIN32)
@@ -10030,8 +10039,6 @@ int main(int argc, char* argv[]) SDL_MAIN_NOEXCEPT {
                     mainMenu.alloc_item(DOSBoxMenu::item_type_id,"dos_ems_false").set_text("Disable EMS emulation").
                         set_callback_function(dos_ems_menu_callback);
                 }
-                mainMenu.alloc_item(DOSBoxMenu::item_type_id,"quick_launch").set_text("Quick launch program...").
-                    set_callback_function(quick_launch_menu_callback);
             }
 
 #if defined(WIN32) && !defined(HX_DOS)
