@@ -1677,7 +1677,7 @@ void SHELL_Init() {
 		winautorun=startcmd;
 		first_run=false;
     }
-    mainMenu.get_item("quick_launch").enable(true).refresh_item(mainMenu);
+    mainMenu.get_item("mapper_quickrun").enable(true).refresh_item(mainMenu);
 	mainMenu.get_item("quick_reboot").check(use_quick_reboot).refresh_item(mainMenu);
 	mainMenu.get_item("shell_config_commands").check(enable_config_as_shell_commands).enable(true).refresh_item(mainMenu);
 #if defined(WIN32) && !defined(HX_DOS)
